# DeaL-Hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  agent.py  cache.py  cheapshark.py  config.py  deal_logic.py  error_handler.py  games_dataset.py  games_db.py  models.py  nlp.py  ollama_helper.py  preferences.py  price_trends.py  prompts.py  ui.py  vectorstore.py
data/: games_database.csv  games_with_embeddings.csv  price_history.csv
scripts/: build_games_database.py  chroma_setup.py  generate_game_embeddings.py  pinecone_setup.py
