[project]
name = "game-deals-hunter"
version = "0.1.0"
description = "Game deals recommendation app using LangChain, Ollama, Pinecone, and Streamlit"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-ollama>=0.1.0",
  "langchain-pinecone>=0.1.0",
  "ollama>=0.2.0",
  "pandas>=2.2.0",
  "pinecone>=5.0.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
  "streamlit>=1.36.0",
]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true
